--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,12 @@
 @tailwind base;
+/*C:\Projects\tailwind\node_modules\tailwindcss\lib\css\preflight.css*/
+
 @tailwind components;
+
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
+
+@layer components {
+  .btn-big {
+    @apply rounded-full  px-6 py-2 text-base font-bold text-white drop-shadow-lg hover:scale-95 hover:opacity-70 hover:transition-all;
+  }
+}
