--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,4 +9,7 @@
   .btn-big {
     @apply rounded-full  px-6 py-2 text-base font-bold text-white drop-shadow-lg hover:scale-95 hover:opacity-70 hover:transition-all;
   }
+  .btn-big-disable {
+    @apply rounded-full bg-gradient-to-tr from-gray-300 to-gray-200 px-6 py-2 text-base font-bold text-white;
+  }
 }
