--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,4 +12,7 @@
   .btn-big-disable {
     @apply rounded-full bg-gradient-to-tr from-gray-300 to-gray-200 px-6 py-2 text-base font-bold text-white;
   }
+  .btn-small {
+    @apply rounded-lg px-4 py-2 text-xs font-medium text-white drop-shadow-sm hover:opacity-80 hover:transition-all;
+  }
 }
